--- a/react_edx/package.json
+++ b/react_edx/package.json
@@ -8,7 +8,9 @@
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.0.10",
+    "react-time-format": "^0.0.5",
     "webpack-bundle-tracker": "^0.2.0"
   },
   "scripts": {
